RWHV should use IsMouseLocked istead of mouse_locked_

RenderWidgetHostViewAura should use IsMouseLocked instead of
mouse_locked_ because the locked state is stored in RWHV_event_handler.

Remove mouse_locked_ from the base class to prevent misuse.

Bug: 812964
Change-Id: I5201c7b6d77d1e52f9da2344899b6ab293e44f86
Reviewed-on: https://chromium-review.googlesource.com/1102911
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570072}
Former-commit-id: b15a757db42e85ea817d2be77eeee6ace8791200