content/browser/pointer_lock_browsertest_mac.mm
@@ -11,13 +11,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace content {
 
-namespace {
-
-class MockRenderWidgetHostView : public RenderWidgetHostViewMac {
+class MockPointerLockRenderWidgetHostView : public RenderWidgetHostViewMac {
  public:
-  MockRenderWidgetHostView(RenderWidgetHost* host, bool is_guest_view_hack)
+  MockPointerLockRenderWidgetHostView(RenderWidgetHost* host,
+                                      bool is_guest_view_hack)
       : RenderWidgetHostViewMac(host, is_guest_view_hack) {}
-  ~MockRenderWidgetHostView() override {
+  ~MockPointerLockRenderWidgetHostView() override {
     if (mouse_locked_)
       UnlockMouse();
   }
@@ -41,13 +40,12 @@ class MockRenderWidgetHostView : public RenderWidgetHostViewMac {
   bool HasFocus() const override { return true; }
 };
 
-}  // namespace
-
 void InstallCreateHooksForPointerLockBrowserTests() {
   WebContentsViewMac::InstallCreateHookForTests(
       [](RenderWidgetHost* host,
          bool is_guest_view_hack) -> RenderWidgetHostViewMac* {
-        return new MockRenderWidgetHostView(host, is_guest_view_hack);
+        return new MockPointerLockRenderWidgetHostView(host,
+                                                       is_guest_view_hack);
       });
 }
 
